public/css/wind.css
/* -------------------------------------------------------------------------- */
/* Light Mode                                                                 */
/* -------------------------------------------------------------------------- */

/* height */
.h-screen { height: 100vh; }
.h-full { height: 100%; }
.h-2 { height: 20%; }

/* width */
.w-full { width: 100%; }
.w-1 { width: 10%; }

/* margin */
.m-5px { margin: 5px; }
.m-10px { margin: 10px; }

.mx-15pct { margin: 0 15vw; }
.mx-20pct { margin: 0 20vw; }
.ml-20pct { margin-left: 20vw; }
.mr-20pct { margin-right: 20vw; }

/* border */
.border-black { border: 1px solid black; }
.border-white { border: 1px solid white; }
.border-red { border: 1px solid red; }
.radius-5 { border-radius: 12px; }

/* text */
.text-md { font-size: 1.25rem; }

/* flexbox */
.flex { display: flex; }

.justify-center { justify-content: center; }

.items-center { align-items: center; }
.items-start { align-items: start; }

/* flex item */
.flex-1 { flex: 1 1 0% }
.flex-8 { flex: 8 1 0% }
.flex-15 { flex: 15 1 0%; }
.flex-70 { flex: 70 1 0%; }

/* grid */
.grid { display: grid; }
.grid-cols-2 { grid-template-columns: repeat(2, minmax(0, 1fr));; }

/* object fit */
.object-contain { object-fit: contain; }
.object-cover { object-fit: cover; }
.object-fill { object-fit: fill; }
.object-none { object-fit: none; }
.object-scale-down { object-fit: scale-down; }


/* component thumbnail */
.thumbnail {
	width:  70px;
	height: 100px;
	margin: 10px;
}



/* -------------------------------------------------------------------------- */
/* Dark Mode                                                                  */
/* -------------------------------------------------------------------------- */

/* background */
.dark\:bg-black { background-color: black; }
.dark\:bg-gray { background-color: gray; }

.dark\:text-white { color: white; }

